5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4058/executions/1602_2895.log
== SUBMITION (2019-03-20 19:00:27) 
-- CODE:
jogos=2
jogo1=5.0
jogo2=5.0
frt=20
2*5+20
-- EXECUTION TIME:
0.119662
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:

-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:

-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:03:33) 
-- CODE:
jogos=2
jogo1=5.0
jogo2=5.0
frt=20
jogos=float(input("preço total?"))
total=2*5+20
print(total)
-- OUTPUT:
30
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:03:54) 
-- CODE:
jogos=2
jogo1=5
jogo2=5
frt=20
jogos=float(input("preço total?"))
total=2*5+20
print(total)
-- OUTPUT:
30
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:03:55) 
-- CODE:
jogos=2
jogo1=5
jogo2=5
frt=20
jogos=float(input("preço total?"))
total=2*5+20
print(total)
-- OUTPUT:
30
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:03:56) 
-- CODE:
jogos=2
jogo1=5
jogo2=5
frt=20
jogos=float(input("preço total?"))
total=2*5+20
print(total)
-- OUTPUT:
30
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:03:56) 
-- CODE:
jogos=2
jogo1=5
jogo2=5
frt=20
jogos=float(input("preço total?"))
total=2*5+20
print(total)
-- OUTPUT:
30
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:03:56) 
-- CODE:
jogos=2
jogo1=5
jogo2=5
frt=20
jogos=float(input("preço total?"))
total=2*5+20
print(total)
-- OUTPUT:
30
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:03:56) 
-- CODE:
jogos=2
jogo1=5
jogo2=5
frt=20
jogos=float(input("preço total?"))
total=2*5+20
print(total)
-- OUTPUT:
30
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:03:57) 
-- CODE:
jogos=2
jogo1=5
jogo2=5
frt=20
jogos=float(input("preço total?"))
total=2*5+20
print(total)
-- OUTPUT:
30
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:03:57) 
-- CODE:
jogos=2
jogo1=5
jogo2=5
frt=20
jogos=float(input("preço total?"))
total=2*5+20
print(total)
-- OUTPUT:
30
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:04:12) 
-- CODE:
jogos=2
jogo1=5
jogo2=5
frt=20
jogos=float(input("preco total?"))
total=2*5+20
print(total)
-- EXECUTION TIME:
0.159743
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
30
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
30
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
30
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:04:12) 
-- CODE:
jogos=2
jogo1=5
jogo2=5
frt=20
jogos=float(input("preco total?"))
total=2*5+20
print(total)
-- OUTPUT:
30
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:04:14) 
-- CODE:
jogos=2
jogo1=5
jogo2=5
frt=20
jogos=float(input("preco total?"))
total=2*5+20
print(total)
-- OUTPUT:
30
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:04:42) 
-- CODE:
jogos=2
jogo1=5
jogo2=5
frt=20
jogos=float(input("preco total?"))
total=2*jogos+20
print(total)
-- OUTPUT:
44.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:04:43) 
-- CODE:
jogos=2
jogo1=5
jogo2=5
frt=20
jogos=float(input("preco total?"))
total=2*jogos+20
print(total)
-- EXECUTION TIME:
0.138026
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
44.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
40.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
512.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:04:58) 
-- CODE:
jogos=2
jogo1=5
jogo2=5
frt=20
jogos=float(input("preco total?"))
total=jogo1+jogo2+20
print(total)
-- OUTPUT:
30
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:05:00) 
-- CODE:
jogos=2
jogo1=5
jogo2=5
frt=20
jogos=float(input("preco total?"))
total=jogo1+jogo2+20
print(total)
-- EXECUTION TIME:
0.125702
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
30
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
30
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
30
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:05:14) 
-- CODE:
jogos=2
jogo1=5.0
jogo2=5.0
frt=20
jogos=float(input("preco total?"))
total=jogo1+jogo2+20
print(total)
-- OUTPUT:
30.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:05:16) 
-- CODE:
jogos=2
jogo1=5.0
jogo2=5.0
frt=20
jogos=float(input("preco total?"))
total=jogo1+jogo2+20
print(total)
-- EXECUTION TIME:
0.183214
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
30.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
30.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
30.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:06:16) 
-- CODE:
jogos=2
jogo1=5.0
jogo2=5.0
frt=20
var=float(input("preco total? "))
total=var*2+20
print(total)
-- OUTPUT:
44.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:06:17) 
-- CODE:
jogos=2
jogo1=5.0
jogo2=5.0
frt=20
var=float(input("preco total? "))
total=var*2+20
print(total)
-- EXECUTION TIME:
0.148601
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
44.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
40.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
512.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:06:31) 
-- CODE:
jogos=2
jogo1=5.0
jogo2=5.0
frt=20
var= float(input("preco total? "))
total=var*2+20
print(total)
-- OUTPUT:
44.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:06:32) 
-- CODE:
jogos=2
jogo1=5.0
jogo2=5.0
frt=20
var= float(input("preco total? "))
total=var*2+20
print(total)
-- EXECUTION TIME:
0.130076
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
44.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
40.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
512.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:06:36) 
-- CODE:
jogos=2
jogo1=5.0
jogo2=5.0
frt=20
var= float(input("preco total? "))
total= var*2+20
print(total)
-- OUTPUT:
44.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:06:37) 
-- CODE:
jogos=2
jogo1=5.0
jogo2=5.0
frt=20
var= float(input("preco total? "))
total= var*2+20
print(total)
-- EXECUTION TIME:
0.135425
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
44.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
40.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
512.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:08:27) 
-- CODE:
jogos=2
jogo1=5.0
jogo2=5.0
frt=20.0
var= float(input("preco total? "))
total= var*2+20
print(total)
-- OUTPUT:
44.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:08:28) 
-- CODE:
jogos=2
jogo1=5.0
jogo2=5.0
frt=20.0
var= float(input("preco total? "))
total= var*2+20
print(total)
-- EXECUTION TIME:
0.196114
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
44.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
40.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
512.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:10:15) 
-- CODE:
jogos=2
jogo1=5.0
jogo2=5.0
frt=20.0
var= int(float(input("preco total? ")))
total= var*2+20
print(total)
-- OUTPUT:
44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:10:16) 
-- CODE:
jogos=2
jogo1=5.0
jogo2=5.0
frt=20.0
var= int(float(input("preco total? ")))
total= var*2+20
print(total)
-- EXECUTION TIME:
0.204709
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
44
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
40
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
512
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:10:23) 
-- CODE:
jogos=2
jogo1=5.0
jogo2=5.0
frt=20.0
var= int()float(input("preco total? "))
total= var*2+20
print(total)
-- ERROR:
File "XXXX", line 5
    var= int()float(input())
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:10:24) 
-- CODE:
jogos=2
jogo1=5.0
jogo2=5.0
frt=20.0
var= int()float(input("preco total? "))
total= var*2+20
print(total)
-- EXECUTION TIME:
0.135199
-- ERROR:
  File "/home/codebench/codes/1602/2895/main.py", line 5
    var= int()float(input())
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:10:25) 
-- CODE:
jogos=2
jogo1=5.0
jogo2=5.0
frt=20.0
var= int()float(input("preco total? "))
total= var*2+20
print(total)
-- ERROR:
File "XXXX", line 5
    var= int()float(input())
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:10:35) 
-- CODE:
jogos=2
jogo1=5.0
jogo2=5.0
frt=20.0
var= int(float(input("preco total? ")))
total= var*2+20
print(total)
-- OUTPUT:
44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:10:36) 
-- CODE:
jogos=2
jogo1=5.0
jogo2=5.0
frt=20.0
var= int(float(input("preco total? ")))
total= var*2+20
print(total)
-- EXECUTION TIME:
0.169512
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
44
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
40
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
512
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:10:37) 
-- CODE:
jogos=2
jogo1=5.0
jogo2=5.0
frt=20.0
var= int(float(input("preco total? ")))
total= var*2+20
print(total)
-- OUTPUT:
44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:10:37) 
-- CODE:
jogos=2
jogo1=5.0
jogo2=5.0
frt=20.0
var= int(float(input("preco total? ")))
total= var*2+20
print(total)
-- OUTPUT:
44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:10:38) 
-- CODE:
jogos=2
jogo1=5.0
jogo2=5.0
frt=20.0
var= int(float(input("preco total? ")))
total= var*2+20
print(total)
-- OUTPUT:
44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:10:43) 
-- CODE:
jogos=2
jogo1=5.0
jogo2=5.0
frt=20.0
var= int(float(input("preco total?")))
total= var*2+20
print(total)
-- OUTPUT:
44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:10:44) 
-- CODE:
jogos=2
jogo1=5.0
jogo2=5.0
frt=20.0
var= int(float(input("preco total?")))
total= var*2+20
print(total)
-- EXECUTION TIME:
0.129371
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
44
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
40
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
512
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:10:45) 
-- CODE:
jogos=2
jogo1=5.0
jogo2=5.0
frt=20.0
var= int(float(input("preco total?")))
total= var*2+20
print(total)
-- OUTPUT:
44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:11:41) 
-- CODE:
jogos=2
jogo1=5.0
jogo2=5.0
frt=20.0
var= float(input("preco total?"))
total= var*2+20
print(total)
-- OUTPUT:
44.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:11:42) 
-- CODE:
jogos=2
jogo1=5.0
jogo2=5.0
frt=20.0
var= float(input("preco total?"))
total= var*2+20
print(total)
-- EXECUTION TIME:
0.213034
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
44.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
40.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
512.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:15:19) 
-- CODE:
jogos=2
jogo1=5.0
jogo2=5.0
frt=20.0
var = float(input("Qual o valor do jogo? "))
total= var*2+20
print(total)
-- OUTPUT:
44.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:15:21) 
-- CODE:
jogos=2
jogo1=5.0
jogo2=5.0
frt=20.0
var = float(input("Qual o valor do jogo? "))
total= var*2+20
print(total)
-- EXECUTION TIME:
0.129253
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
44.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
40.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
512.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:24:48) 
-- CODE:
a= int(input("qual a quantidade de jogos? "))
var = float(input("Qual o valor do jogo? "))
c = float(input("qual o valor do frete? "))
total= (a*var)+c
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:24:49) 
-- CODE:
a= int(input("qual a quantidade de jogos? "))
var = float(input("Qual o valor do jogo? "))
c = float(input("qual o valor do frete? "))
total= (a*var)+c
print(total)
-- EXECUTION TIME:
0.133271
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
